--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
-<<<<<<< HEAD
 .footer-bar{
 width: 100%;
 height: 30px;
-=======
+background-color: red;
+}
+
 #Banner_principal {
     
->>>>>>> master
 }
