--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,23 @@
 .footer-bar{
 width: 100%;
-height: 30px;
+height: 80px;
 background-color: #0C2E41;
+display: flex;
+justify-content: center;
+}
+
+.footer-barr-content{
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+    align-items: center;
+}
+
+.footer-barr-content p{
+  margin-bottom: 0px;
+  margin-right: 10px;
+  margin-left: 10px;
 }
 
 #Banner_principal {
