--- a/css/style.css
+++ b/css/style.css
@@ -21,5 +21,9 @@ justify-content: center;
 }
 
 #Banner_principal {
-    
+        background-image: url("../assets/img/Grupo\ 156.svg");
+        background-size: cover;
+        background-repeat: no-repeat;
+        height: 100%;
+        
 }
