--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,8 @@ justify-content: center;
   margin-bottom: 0px;
   margin-right: 10px;
   margin-left: 10px;
+  font-family: Source Sans Pro;
+  font-size: 24px;
 }
 
 #Banner_principal {
