--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ justify-content: center;
 }
 
 #Banner_principal {
-        background-image: url("../assets/img/Grupo\ 155.svg");
+        background-image: url("../assets/img/BannerPrincipal.svg");
         background-size: cover;
         background-repeat: no-repeat;
         height: 100%;
