--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,47 @@ footer h3{
     font-weight: 500;
   
  }
+
+ .icons-social{
+    display: flex;
+    justify-content: space-around;
+ }
+
+ .group-atend{
+    display: flex;
+    align-items: center;
+    font-size: 20px;
+    border: solid 2px #38B6AB;
+    width: 80%;
+    padding-left: 20px;
+    padding-top: 10px;
+    margin-top: 35px;
+    margin-bottom: 35px;
+ }
+
+ .group-atend img{
+     margin-right: 20px;
+ }
+
+ .group-atend p span{
+    font-weight: bold;
+ }
+
+ .group-rodape-dir{
+     display: flex;
+     align-items: center;
+     margin-bottom: 20px;
+}
+
+.group-rodape-dir p{
+    margin-bottom: 0px;
+    font-size: 20px;
+}
+
+.group-rodape-dir img{
+    margin-right: 15px;
+}
+
 /*FIM FOOTER*/
 
 .navbar {
