--- a/css/responsivo.css
+++ b/css/responsivo.css
@@ -1,12 +1,16 @@
 
 /*==========================================================================================================================*/
 @media(min-width: 320px) and (max-width: 576px){
-
+    .img-quem {
+        width: 180px;
+    }
 }
 
 /*==========================================================================================================================*/
 @media(min-width: 577px) and (max-width: 768px){
-   	
+    .img-quem {
+        width: 270px;
+    }
 }
 
 /*==========================================================================================================================*/
@@ -23,3 +27,15 @@
 @media(min-width: 1201px) {
   	
 }
+/*==========================================================================================================================*/
+@media(min-width: 1114px) {
+    .img-quem1 {
+        padding-top: 60px;
+      }
+      .img-quem2{
+          padding-top: 120px;
+      }
+      .img-quem3 {
+        padding-top: 0px;
+      }
+  }
