--- a/css/style.css
+++ b/css/style.css
@@ -193,7 +193,36 @@ footer h3{
   color: #38B6AB;
 }
 
-.border1 {
-  border-bottom: solid 2px #38B6AB;
-  margin-bottom: 2px;
+.quemFaz2 {
+  margin-bottom: 0;
+}
+
+.quem-faz {
+  max-width: 1800px;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.img-quem img {
+  width: 150px;
+  margin: 1rem;
+  margin-top: 0;
+}
+
+.img-quem p {
+  text-align: center;
+  color: #005077;
+}
+
+.img-quem p span {
+  display: block;
+  font-weight: 600;
+}
+
+.background-quemFaz {
+  background-image: url(c:/Serel/assets/img/backgorund-quemfaz.jpg);
+  background-size: cover;
+  display: flex;
+  justify-content: center;
 }
