--- a/css/responsivo.css
+++ b/css/responsivo.css
@@ -19,13 +19,15 @@
 }
 
 /*==========================================================================================================================*/
-@media(min-width: 993px) and (max-width: 1200px){
-	
+@media(min-width: 993px) and (max-width: 1400px){
+	.parceiros img {
+        margin: 0rem;
+    }
 }
 
 /*==========================================================================================================================*/
-@media(min-width: 1201px) {
-  	
+@media(min-width: 1401px) {
+    
 }
 /*==========================================================================================================================*/
 @media(min-width: 1114px) {
