--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ footer{
     background-image: url("../assets/img/bg-footer.svg");
     background-size: cover;
     background-repeat: no-repeat;
-    height: 735px;
+    height: auto;
     position: relative;
     font-family: Source Sans Pro;
     color: #fff;
