--- a/css/responsivo.css
+++ b/css/responsivo.css
@@ -1,8 +1,77 @@
 
 /*==========================================================================================================================*/
 @media(min-width: 320px) and (max-width: 576px){
-    .img-quem {
-        width: 180px;
+    .text-parceiros{
+        padding-right: 0px;
+    }
+
+    .img-parceiros{
+        padding-right: 0px;
+    }
+
+    .sec-parceiros{
+        padding-right: 0px;
+        margin-right: 0px;
+    }
+    
+    .slick-list{
+        padding: 0px;
+    }
+
+    .box-quem-conhece{
+        display: flex!important;
+        flex-direction: column;
+    }
+
+    .carousel-control-next {
+        right: 0rem;
+    }
+
+    .carousel-control-prev {
+        left: 0rem;
+    }
+
+    .div-conheca {
+        height: auto;
+        background-size: cover;
+        background-position: right;
+        background-repeat: no-repeat;
+        margin-top: 0px!important;
+        margin-bottom: 0px!important;
+    }
+
+    #btn_menu{
+        padding: 0px;
+    }
+
+    .navbar-brand{
+        padding: 0px;
+        margin: 0px;
+    }
+
+    .navbar{
+        padding: 1.5rem 0rem;
+    }
+
+    #navbarToggleExternalContent {
+        position: absolute;
+        right: 0;
+        left:0;
+        border: solid 2px #38B6AB;
+        border-radius: 10px;
+        width: 90%;
+        height: auto;
+        margin: 0 auto;
+    }
+
+    .pos-f-t{
+        justify-content: center;
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    #btn_acesso {
+        margin-right: 0;
     }
 }
 
