--- a/css/style.css
+++ b/css/style.css
@@ -436,3 +436,12 @@ footer h3{
   margin-left: 10px;
   margin-top: 20px;
 }
+
+#servicos p{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  color: #005077;
+  font-size: 20px;
+}
