--- a/css/style.css
+++ b/css/style.css
@@ -222,6 +222,12 @@ footer h3{
 .quemSomos1{
   position: relative;
   left: 0;
+  display: flex;
+  justify-content: center;
+}
+
+.img-somos{
+  width: 50%;
 }
 
 .quemSomos2{
@@ -233,6 +239,7 @@ footer h3{
   background-color: #fff;
   font-size: 16px;
   color: #005077;
+  margin-left: -50px;
 }
 
 #quemH1 {
@@ -442,20 +449,28 @@ footer h3{
 
 .slick-track div {
   display: flex!important;
-  height: auto;
-  justify-content: flex-start;
+  justify-content: center;
 }
 
 .text-content {
   flex-direction: column;
   margin: 0!important;
+  border-radius: 0px 15px 15px 0px;
+  border-right: solid 1px #026A94;
+  border-bottom: solid 1px #026A94;
+  border-top: solid 1px #026A94;
 }
 
 .slick-slide {
   align-items: center;
-  margin-right: 20px;
-  margin-left: 20px;
+  margin-right: 30px;
+  margin-left: 30px;
   opacity: 50%;
+  width: 976px;
+  overflow: hidden;
+  border-radius: 15px;
+  align-items: stretch;
+  height: max-content;
 }
 
 .slick-active {
